reimport from csv

--- a/IA15FC33C.opf/meta.yml
+++ b/IA15FC33C.opf/meta.yml
@@ -1,20 +1,18 @@
 id: IA15FC33C
-legacy_id: null
 ocr_import_info:
   bdrc_scan_id: W3CN4872
   source: bdrc
   ocr_info:
     timestamp: '2023-02-01T00:00:00Z'
-  batch_id: batch-0002
+  batch_id: batch-0001
   software_id: norbuketaka
   expected_default_language: bo
   op_import_options: null
 default_language: bo
 source: https://library.bdrc.io
-source_file: null
 initial_creation_type: ocr
-imported: '2023-12-16T17:17:26.816029'
-last_modified: '2023-02-01T00:00:00+00:00'
+imported: 2024-09-12 14:15:12.566856
+last_modified: 2023-02-01 00:00:00+00:00
 parser: https://github.com/OpenPecha/Norbu-Keta-eText-import/blob/main/norbu_ketaka_parser.py
 source_metadata:
   id: http://purl.bdrc.io/resource/W3CN4872
@@ -25,9 +23,7 @@ source_metadata:
   title: སྡོམ་གསུམ་རྩ་བ་དང་དེའི་འགྲེལ་པ་དཔག་བསམ་སྙེ་མ་སོགས།
   languages:
   - bo
-  author: སྨིན་གླིང་ལོ་ཆེན་དྷརྨ་ཤྲཱི།
-statistics: null
-quality: null
+  author: མངའ་རིས་པཎ་ཆེན་པདྨ་དབང་རྒྱལ།
 bases:
   I3CN4874:
     source_metadata:
@@ -42,5 +38,4 @@ copyright:
   notice: The proofread texts are donated by the Norbu Ketaka project led by Queenie
     Luo (Harvard University), Zhiying Li (Sichuan University) and Leonard van der
     Kuijp (Harvard University). Correspondence should be directed to  queenieluo@g.harvard.edu
-  info_url: null
 license: CC0
